Revise ops map sidebar design

--- a/newtab.html
+++ b/newtab.html
@@ -15,7 +15,7 @@ to icon-only mode for fast muscle-memory interaction.
     <title>Ops Map</title>
     <link rel="stylesheet" href="styles/newtab.css" />
   </head>
-  <body>
+  <body class="is-sidebar-collapsed">
     <div id="app-shell">
       <aside id="side-bar" class="side-bar" aria-label="Ops Map controls">
         <div class="side-head">
@@ -23,10 +23,10 @@ to icon-only mode for fast muscle-memory interaction.
             id="sidebar-toggle"
             class="sidebar-toggle"
             type="button"
-            aria-label="Collapse sidebar"
-            title="Collapse sidebar"
+            aria-label="Expand sidebar"
+            title="Expand sidebar"
           >
-            <<
+            >>
           </button>
           <div class="brand-block">
             <h1>Ops Map</h1>
